--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
 		<link rel="shortcut icon" href="img/favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/default.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
-        <link href='http://fonts.googleapis.com/css?family=Armata|Karla|Roboto:400,900' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Lato:900' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Armata|Karla|Roboto:400,900' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Lato:900' rel='stylesheet' type='text/css'>
       <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -31,7 +31,7 @@
             
             <header class="clearfix">
 				<a href="index.html" class="logo"> <img src="img/logo small 1f2f75-1.png" /></a>
-				<div class="social"><a href="http://www.youtube.com/user/dentalautomations"><img src="img/ytbicon.png" class="socialicon"></a><a href="http://www.facebook.com/dentalautomations"><img src="img/fbicon.png" class="socialicon"></a></div>
+				<div class="social"><a href="https://www.youtube.com/user/dentalautomations"><img src="img/ytbicon.png" class="socialicon"></a><a href="https://www.facebook.com/dentalautomations"><img src="img/fbicon.png" class="socialicon"></a></div>
 		  </header>	
 			<center><div class="main">
 				<nav class="cbp-hsmenu-wrapper" id="cbp-hsmenu-wrapper">
@@ -58,7 +58,7 @@
 								</ul>
 							</li>
                             <li><a href="videos.html">Videos</a></li>
-							<li><a href="http://www.facebook.com/dentalautomations" target="_blank">News and Events</a></li>										
+							<li><a href="https://www.facebook.com/dentalautomations" target="_blank">News and Events</a></li>										
               <li><a href="#">Contact Us</a></li>
               <li><a href="catalog2018.pdf">Catalogs</a></li>
 						</ul>
@@ -197,7 +197,7 @@
   <!-- End SlidesJS Required: Start Slides -->
 
   <!-- SlidesJS Required: Link to jQuery -->
-<!-- !!!  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+<!-- !!!  <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
   <!-- End SlidesJS Required -->
 
   <!-- SlidesJS Required: Link to jquery.slides.js -->
